--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4",
-    "my-lib": "0.0.1"
+    "logger": "0.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.1",
