--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
     "declaration": false,
     "downlevelIteration": true,
     "paths": {
-      "my-lib": [
-        "dist/my-lib/my-lib",
-        "dist/my-lib"
+      "logger": [
+        "dist/logger/logger",
+        "dist/logger"
       ]
     },
     "experimentalDecorators": true,
